--- a/index.html
+++ b/index.html
@@ -18,16 +18,21 @@
 <body>
     <header></header>
     <main>
+
+        <!-- SECTION HERO -->
+
         <section>
-            <div>
-                <h1>Embrace Elegance with Ada Luxe</h1>
-                <p>Discover a world of sophistication and modern femininity, where style meets sustainability in our exclusive collections.</p>
-                <button type="button">Explore the Collection</button>
-            </div>
-            <div class="image-container">
-  <img src=".images/hero.jpg" alt="pretty women">
-  <div class="overlay-rectangle"></div>
-</div>
+          <div class="hero container">
+                <div class="hero-left">
+                    <h1 class="hero-title">Embrace Elegance with Ada Luxe</h1>
+                    <p class="main-text text">Discover a world of sophistication and modern femininity, where style meets sustainability in our exclusive collections.</p>
+                    <button type="button">Explore the Collection</button>
+                </div>
+                <div class="image-container">
+      <img src="./images/hero.jpg" alt="pretty women" width="504" height="504">
+                </div>
+
+          </div>
         </section>
         <section></section>
         <section></section>
