--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section>
           <div class="hero container">
                 <div class="hero-left">
-                    <h1 class="hero-title">Embrace Elegance with Ada Luxe</h1>
+                    <h1 class="hero-title title">Embrace Elegance with Ada Luxe</h1>
                     <p class="main-text text">Discover a world of sophistication and modern femininity, where style meets sustainability in our exclusive collections.</p>
                     <button type="button">Explore the Collection</button>
                 </div>
@@ -34,7 +34,39 @@
 
           </div>
         </section>
-        <section></section>
+
+        <!-- Collection Highlights -->
+
+
+        <section сlass="collection">
+          <div class="collection container">
+            <h2 class="collection-title title">Collection Highlights</h2>
+            <p class="collection-text text">Explore the fusion of modern elegance and innovative design in our 'Collection Highlights.' Each piece is a statement, reflecting the unique aesthetic of 'Ada Luxe.' Dive into the collection below.</p>
+            
+            <ul class="collection-list">
+              <li class="collection-item">
+                <img src="./images/collection 1.jpg" alt="baroque women" width="333" height="341">
+                <h3 class="title-img text">Baroque Sport Elegance</h3>
+                <p class="text-img">An extraordinary blend of athletic comfort and opulent style, this sport top adorned with baroque embellishments is paired with a silky white satin skirt. A look that redefines sportswear luxury.</p>
+                <p class="explore">Explore the Collection</p>
+              </li>
+              <li>
+                <img src="./images/collection 2.jpg" alt="golden women" width="333" height="341">
+                <h3 class="title-img text">Golden Reflections</h3>
+                <p class="text-img">Embrace the edgy sophistication with this glossy black vinyl top, infused with golden reflections. A piece that epitomizes the bold spirit of modern fashion.</p>
+                <p class="explore">Explore the Collection</p>
+              </li>
+              <li>
+                <img src="./images/collection 3.jpg" alt="monochrome women" width="333" height="341">
+                <h3 class="title-img text">Monochrome Lace Enchantment</h3>
+                <p class="text-img">A timeless creation of black and white lace, this dress weaves together classic elegance and contemporary design. The embodiment of grace for the fashion-forward woman.</p>
+                <p class="explore">Explore the Collection</p>
+              </li>
+            </ul>
+
+          </div>
+
+        </section>
         <section></section>
         <section></section>
         <section></section>
